tests/fail/nightly/derive_placeholders.stderr
error: placeholder `b` is used multiple times in the format string
 --> tests/fail/nightly/derive_placeholders.rs:2:44
  |
2 | #[sscanf(format = "{5} {x} {} {} {b} {} {} {b}")]
  |                                            ^^^

error: placeholder `b` is used multiple times in the format string
 --> tests/fail/nightly/derive_placeholders.rs:2:34
  |
2 | #[sscanf(format = "{5} {x} {} {} {b} {} {} {b}")]
  |                                  ^^^

error: field `b` is marked as default, but is also used in a placeholder
 --> tests/fail/nightly/derive_placeholders.rs:9:20
  |
9 | #[sscanf(format = "{b}")]
  |                    ^^^

error: field `b` is marked as default, but is also used in a placeholder
  --> tests/fail/nightly/derive_placeholders.rs:12:14
   |
12 |     #[sscanf(default = 5)]
   |              ^^^^^^^^^^^
